# Enigma-Privacy-Tools

./: README.md
client/public/: index.html
client/src/: App.css
client/src/actions/: index.js
client/src/components/: App.js  DataValidation.js  Header.js
client/src/reducers/: index.js
migrations/: 2_deploy_contracts.js
secret_contracts/anker_privacy_tools/: Cargo.toml
secret_contracts/anker_privacy_tools/src/: lib.rs
smart_contracts/: AnkerPrivacyTools.sol
