[package]
name = "anker_privacy_tools"
version = "0.1.0"
authors = ["Viktor Tyshchenko <vtitch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eng-wasm = "0.1.3"
eng-wasm-derive = "0.1.3"
serde = "1.0.84"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
